WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252473
REGRESSION(
253824@main
): [GTK][WPE] ASSERTION FAILED: m_sessionID.isEphemeral() || !path.isEmpty() running C API tests
https://bugs.webkit.org/show_bug.cgi?id=252473
Summary
REGRESSION(253824@main): [GTK][WPE] ASSERTION FAILED: m_sessionID.isEphemeral...
Carlos Garcia Campos
Reported
2023-02-17 04:19:42 PST
The problem is that the default website data store is created with an ephemeral configuration, but a persistent session ID.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-02-17 04:21:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10269
EWS
Comment 2
2023-02-17 07:12:08 PST
Committed
260445@main
(102fc4e99038): <
https://commits.webkit.org/260445@main
> Reviewed commits have been landed. Closing PR #10269 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug