REGRESSION(253824@main): [GTK][WPE] ASSERTION FAILED: m_sessionID.isEphemeral() || !path.isEmpty() running C API tests https://bugs.webkit.org/show_bug.cgi?id=252473

Reviewed by Michael Catanzaro.

The problem is that the default website data store is created with an
ephemeral configuration, but a persistent session ID.

* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::defaultDataStoreIsPersistent):
(WebKit::WebsiteDataStore::defaultDataStore):

Canonical link: https://commits.webkit.org/260445@main